Travis settings were changed

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,19 @@
 dist: trusty
 sudo: required
-language: cpp
+#language: cpp
+
+language: generic
+matrix:
+  include:
+    - os: linux
+      env: COMPILER_NAME=gcc CXX=g++-5 CC=gcc-5
+      addons:
+        apt:
+          packages:
+            - g++-5
+          sources: &sources
+            - llvm-toolchain-precise-3.8
+            - ubuntu-toolchain-r-test
 
 before_script:
   - sudo apt-get update -qq
